src/test/deca/context/invalid/created/binary_exp/op_arith/minus_int_A.deca
// Description :
//    test minus entre un int et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type int, L’opérande droite est de type A. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
int a;
A b;
int c = a - b;
}
